Fix margin on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,7 +30,7 @@ $dark: black;
   }
 
   .tag {
-    margin-left: 1em;
+    margin-left: 9px;
     background-color: rgb(78,154,207);
     color: white;
     font-size: 12px;
